--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://edwardatkinson.github.io/facialrecognition",
   "name": "facialrecognition",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,8 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
